--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
     "leaflet": "^1.9.4",
     "next": "14.2.12",
@@ -19,6 +20,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "react-query": "^3.39.3",
     "socket.io-client": "^4.8.0",
     "sweetalert2": "^11.14.0",
     "xlsx": "^0.18.5"
