--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GOOGLE_CLIENT_ID=1091654586558-9ka27mqtgvk8lpaar58tqesve8lvk00h.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000 
+NEXT_PUBLIC_MAPS_API_KEY=AIzaSyDD6ZUur-Eff6mJa6DcEACP4aYXQWe6Z24
